--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -42,7 +43,6 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="24dp"
                 android:text="@string/settings_name"
-                android:textColor="@android:color/white"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -52,6 +52,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/featuresSettings"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -63,7 +64,8 @@
                         android:layout_height="24dp"
                         android:layout_marginEnd="16dp"
                         android:contentDescription="@string/settings_features_title"
-                        android:src="@drawable/ic_feature" />
+                        android:src="@drawable/ic_feature"
+                        app:tint="?attr/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -74,19 +76,18 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/settings_features_title"
-                            android:textColor="@android:color/white"
                             android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/settings_features_description"
-                            android:textColor="@android:color/darker_gray"
                             android:textSize="14sp" />
                     </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lookFeelSettings"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -98,7 +99,8 @@
                         android:layout_height="24dp"
                         android:layout_marginEnd="16dp"
                         android:contentDescription="@string/settings_look_feel_title"
-                        android:src="@drawable/ic_look_feel" />
+                        android:src="@drawable/ic_look_feel"
+                        app:tint="?attr/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -109,72 +111,13 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/settings_look_feel_title"
-                            android:textColor="@android:color/white"
                             android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/settings_look_feel_description"
-                            android:textColor="@android:color/darker_gray"
                             android:textSize="14sp" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingVertical="16dp">
-
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginEnd="16dp"
-                        android:contentDescription="@string/settings_help_feedback_title"
-                        android:src="@drawable/ic_help_feedback" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/settings_help_feedback_title"
-                            android:textColor="@android:color/white"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/communitySupport"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingVertical="16dp">
-
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginEnd="16dp"
-                        android:contentDescription="@string/app_name"
-                        android:src="@drawable/ic_community" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/settings_community_support_title"
-                            android:textColor="@android:color/white"
-                            android:textSize="18sp" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -191,7 +134,8 @@
                         android:layout_height="24dp"
                         android:layout_marginEnd="16dp"
                         android:contentDescription="@string/favorite_apps"
-                        android:src="@drawable/ic_favorite" />
+                        android:src="@drawable/ic_favorite"
+                        app:tint="?attr/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -202,7 +146,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/favorite_apps"
-                            android:textColor="@android:color/white"
                             android:textSize="18sp" />
                     </LinearLayout>
                 </LinearLayout>
@@ -220,7 +163,8 @@
                         android:layout_height="24dp"
                         android:layout_marginEnd="16dp"
                         android:contentDescription="@string/hidden_apps"
-                        android:src="@drawable/ic_hidden" />
+                        android:src="@drawable/ic_hidden"
+                        app:tint="?attr/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -231,7 +175,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/hidden_apps"
-                            android:textColor="@android:color/white"
                             android:textSize="18sp" />
                     </LinearLayout>
                 </LinearLayout>
@@ -249,7 +192,8 @@
                         android:layout_height="24dp"
                         android:layout_marginEnd="16dp"
                         android:contentDescription="@string/settings_advanced_title"
-                        android:src="@drawable/ic_advanced" />
+                        android:src="@drawable/ic_advanced"
+                        app:tint="?attr/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -260,7 +204,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/settings_advanced_title"
-                            android:textColor="@android:color/white"
                             android:textSize="18sp" />
                     </LinearLayout>
                 </LinearLayout>
