--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,12 +7,12 @@
         <item name="android:windowDisablePreview">true</item>
 
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/teal_700</item>
-        <item name="colorPrimaryVariant">@color/teal_200</item>
+        <item name="colorPrimary">@color/icon_700</item>
+        <item name="colorPrimaryVariant">@color/icon_200</item>
         <item name="colorOnPrimary">?attr/color</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/icon_200</item>
+        <item name="colorSecondaryVariant">@color/icon_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="colorSurface">@color/white</item>
         <item name="primaryTextShadowColor">@color/whiteTrans50</item>
