--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,7 +30,7 @@
     <fragment
         android:id="@+id/SettingsFragment"
         android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsFragment"
-        android:label="@string/home_fragment_label"
+        android:label="@string/settings_fragment_label"
         tools:layout="@layout/fragment_settings">
         <action
             android:id="@+id/action_SettingsFragment_to_FavoriteFragment"
@@ -38,6 +38,18 @@
         <action
             android:id="@+id/action_SettingsFragment_to_HiddenFragment"
             app:destination="@id/HiddenFragment" />
+        <action
+            android:id="@+id/action_SettingsFragment_to_SettingsAdvancedFragment"
+            app:destination="@id/SettingsAdvancedFragment" />
+        <action
+            android:id="@+id/action_SettingsFragment_to_SettingsFeaturesFragment"
+            app:destination="@id/SettingsFeaturesFragment" />
+        <action
+            android:id="@+id/action_SettingsFragment_to_SettingsLookFeelFragment"
+            app:destination="@id/SettingsLookFeelFragment" />
+        <action
+            android:id="@+id/action_SettingsFragment_to_WidgetsFragment"
+            app:destination="@id/WidgetsFragment" />
         <action
             android:id="@+id/action_SettingsFragment_to_WidgetsSettingsFragment"
             app:destination="@id/WidgetsSettingsFragment" />
@@ -55,10 +67,16 @@
     </fragment>
 
     <fragment
-        android:id="@+id/WidgetsSettingsFragment"
-        android:name="com.github.droidworksstudio.launcher.ui.widgets.settings.SettingsFragment"
-        android:label="@string/widgets_fragment_label"
-        tools:layout="@layout/fragment_settings_widgets" />
+        android:id="@+id/SettingsFeaturesFragment"
+        android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsFeaturesFragment"
+        android:label="@string/settings_fragment_label"
+        tools:layout="@layout/fragment_settings_features" />
+
+    <fragment
+        android:id="@+id/SettingsLookFeelFragment"
+        android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsLookFeelFragment"
+        android:label="@string/settings_fragment_label"
+        tools:layout="@layout/fragment_settings_look_feel" />
 
     <fragment
         android:id="@+id/DrawFragment"
@@ -73,9 +91,21 @@
         tools:layout="@layout/fragment_favorite" />
 
     <fragment
+        android:id="@+id/SettingsAdvancedFragment"
+        android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsAdvancedFragment"
+        android:label="@string/settings_fragment_label"
+        tools:layout="@layout/fragment_settings_advanced" />
+
+    <fragment
         android:id="@+id/HiddenFragment"
         android:name="com.github.droidworksstudio.launcher.ui.hidden.HiddenFragment"
         android:label="@string/hidden_fragment_label"
         tools:layout="@layout/fragment_hidden" />
+
+    <fragment
+        android:id="@+id/WidgetsSettingsFragment"
+        android:name="com.github.droidworksstudio.launcher.ui.widgets.settings.SettingsFragment"
+        android:label="@string/widgets_fragment_label"
+        tools:layout="@layout/fragment_settings_widgets" />
 
 </navigation>
