--- a/app/src/main/res/layout/bottomsheetdialog_padding_settings.xml
+++ b/app/src/main/res/layout/bottomsheetdialog_padding_settings.xml
@@ -31,6 +31,41 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/select_app_group_title"
+                style="@style/TextDefaultStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:background="@android:color/transparent"
+                android:gravity="left|center"
+                android:text="@string/appearance_bottom_dialog_desc_app_group"
+                android:textSize="@dimen/text_large"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/select_app_group_padding_size"
+                style="@style/TextDefaultStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:background="@android:color/transparent"
+                android:gravity="left|center"
+                android:inputType="numberDecimal"
+                android:textSize="@dimen/text_large"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/select_app_title"
                 style="@style/TextDefaultStyle"
                 android:layout_width="wrap_content"
@@ -38,7 +73,6 @@
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="left|center"
-                android:inputType="numberDecimal"
                 android:text="@string/appearance_bottom_dialog_desc_app"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
