--- a/app/src/main/res/layout/fragment_settings_advanced.xml
+++ b/app/src/main/res/layout/fragment_settings_advanced.xml
@@ -21,7 +21,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="142dp"
+            android:layout_marginVertical="52dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:padding="24dp">
