--- a/app/src/main/res/layout/fragment_settings_look_feel.xml
+++ b/app/src/main/res/layout/fragment_settings_look_feel.xml
@@ -22,7 +22,7 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="42dp"
+            android:layout_marginVertical="52dp"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
