I have added the MarginHorizontal back to the top section of home.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,6 +41,7 @@
                 android:id="@+id/blockView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="16dp"
                 android:orientation="vertical">
 
