Feature: Added Navigation hiding.

--- a/app/src/main/res/layout/fragment_settings_look_feel.xml
+++ b/app/src/main/res/layout/fragment_settings_look_feel.xml
@@ -60,7 +60,7 @@
                     tools:ignore="MissingConstraints">
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/statue_bar_text"
+                        android:id="@+id/status_bar_text"
                         style="@style/TextDefaultStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -73,7 +73,38 @@
                         tools:ignore="RtlHardcoded" />
 
                     <androidx.appcompat.widget.SwitchCompat
-                        android:id="@+id/statue_bar_switchCompat"
+                        android:id="@+id/status_bar_switchCompat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scaleX="0.7"
+                        android:scaleY="0.8"
+                        android:thumb="@drawable/shape_switch_thumb"
+                        app:track="@drawable/selector_switch"
+                        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    tools:ignore="MissingConstraints">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/nav_bar_text"
+                        style="@style/TextDefaultStyle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="left|center"
+                        android:text="@string/settings_display_nav_bar"
+                        android:textSize="@dimen/text_large"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:ignore="RtlHardcoded" />
+
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/nav_bar_switchCompat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:scaleX="0.7"
